--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.fefdbcd3.css" as="style"><link rel="preload" href="/assets/js/app.38523e11.js" as="script"><link rel="prefetch" href="/assets/js/2.d512ec45.js"><link rel="prefetch" href="/assets/js/3.7eef38f1.js"><link rel="prefetch" href="/assets/js/4.16844567.js"><link rel="prefetch" href="/assets/js/5.3de77f44.js"><link rel="prefetch" href="/assets/js/6.ff628b13.js"><link rel="prefetch" href="/assets/js/7.1ba3d364.js">
+    <link rel="preload" href="/assets/css/0.styles.fefdbcd3.css" as="style"><link rel="preload" href="/assets/js/app.15658758.js" as="script"><link rel="prefetch" href="/assets/js/2.d512ec45.js"><link rel="prefetch" href="/assets/js/3.7eef38f1.js"><link rel="prefetch" href="/assets/js/4.16844567.js"><link rel="prefetch" href="/assets/js/5.3de77f44.js"><link rel="prefetch" href="/assets/js/6.ef0abc5b.js"><link rel="prefetch" href="/assets/js/7.1ba3d364.js">
     <link rel="stylesheet" href="/assets/css/0.styles.fefdbcd3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.38523e11.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.15658758.js" defer></script>
   </body>
 </html>
