--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.fefdbcd3.css" as="style"><link rel="preload" href="/assets/js/app.caa9eb05.js" as="script"><link rel="prefetch" href="/assets/js/2.d512ec45.js"><link rel="prefetch" href="/assets/js/3.7eef38f1.js"><link rel="prefetch" href="/assets/js/4.8e4e0425.js"><link rel="prefetch" href="/assets/js/5.3de77f44.js"><link rel="prefetch" href="/assets/js/6.7e10c4bd.js">
+    <link rel="preload" href="/assets/css/0.styles.fefdbcd3.css" as="style"><link rel="preload" href="/assets/js/app.da847142.js" as="script"><link rel="prefetch" href="/assets/js/2.d512ec45.js"><link rel="prefetch" href="/assets/js/3.7eef38f1.js"><link rel="prefetch" href="/assets/js/4.cee1feab.js"><link rel="prefetch" href="/assets/js/5.3de77f44.js"><link rel="prefetch" href="/assets/js/6.7e10c4bd.js">
     <link rel="stylesheet" href="/assets/css/0.styles.fefdbcd3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.caa9eb05.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.da847142.js" defer></script>
   </body>
 </html>
